# deep-learning-for-geospatial-analysis

./: .gitignore  1.3. Understanding Neural Networks with Pytorch.ipynb  2. Crop Mapping with Deep Learning.ipynb  4. Building Segmentation from Aerial Imagery.ipynb  5. LiDAR-Based Urban Segmentation.ipynb  README.md  main.py  pyproject.toml
Notebooks/: 1.3. Understanding Neural Networks with Pytorch.ipynb  3. Detecting Crop Changes Over Time.ipynb  Setup.ipynb
