[project]
name = "dl-geospatial-analysis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "folium>=0.20.0",
    "geopandas>=1.1.3",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.9",
    "opencv-python>=4.13.0.92",
    "osmnx>=2.1.0",
    "pillow>=12.2.0",
    "pystac-client>=0.9.0",
    "rasterio>=1.4.4",
    "scikit-image>=0.26.0",
    "scikit-learn>=1.8.0",
    "session-info>=1.0.1",
    "torch>=2.12.0",
    "torchvision>=0.27.0",
    "tqdm>=4.67.3",
]
